added and edited hannes files for test on windoof

--- a/prog_aufgabe9_felix/Makefile
+++ b/prog_aufgabe9_felix/Makefile
@@ -1,6 +1,24 @@
-# -*- Makefile -*-
-
 all:
-	make Makefile.foo
-	make Makefile.shared
-	make Makefile.main
+ifeq (${CONF},LINUX)
+	make -f Makefile.foo
+	make -f Makefile.shared
+	make -f Makefile.main
+	@echo "CONF ist "${CONF}
+else
+ ifeq (${CONF},WINDOWS)
+	make -f Makefile.foo
+	make -f Makefile.shared
+	make -f Makefile.main
+	@echo "CONF ist "${CONF}
+ else 
+	$(error Konfigurationsfehler)
+ endif
+endif
+clean:
+	rm *.o main.exe *.dll *.so
+clear:
+	rm *.o main.exe *.dll *.so
+cl:
+	rm *.o main.exe *.dll *.so
+
+test: all
