--- a/prog_aufgabe9_felix/Makefile.main
+++ b/prog_aufgabe9_felix/Makefile.main
@@ -1,9 +1,8 @@
-# -*- Makefile -*-
-
-all: main
-
-main: main.o foo.o
-	gcc main.c -o main
+all: main.o main.exe
 
 main.o: main.c
+	gcc -c main.c
 	gcc main.c -o main.o
+
+main.exe: main.o foo.o
+	gcc main.c -o main.exe
