edited error message

--- a/prog_aufgabe9_felix/Makefile.win
+++ b/prog_aufgabe9_felix/Makefile.win
@@ -11,7 +11,7 @@ else
 	make -f Makefile.main
 	@echo "CONF ist "${CONF}
  else 
-	$(error Konfigurationsfehler. Bitte CONF=WINDOWS oder CONF=LINUX angeben)
+	$(error Konfigurationsfehler)
  endif
 endif
 clean:
