--- a/prog_aufgabe9_felix/Makefile
+++ b/prog_aufgabe9_felix/Makefile
@@ -11,9 +11,11 @@ else
 	make -f Makefile.main
 	@echo "CONF ist "${CONF}
  else 
-	$(error Konfigurationsfehler. Bitte CONF=WINDOWS oder CONF=LINUX angeben)
+	$(error Konfigurationsfehler)
  endif
 endif
+
+
 clean:
 	rm *.o main.exe *.dll *.so
 clear:
