added dynamic library creation

--- a/prog_aufgabe9_felix/Makefile
+++ b/prog_aufgabe9_felix/Makefile
@@ -1,17 +1,17 @@
 all:
 ifeq (${CONF},LINUX)
 	make -f Makefile.foo
-	make -f Makefile.shared
+	make -f Makefile.shared CONF=LINUX
 	make -f Makefile.main
 	@echo "CONF ist "${CONF}
 else
  ifeq (${CONF},WINDOWS)
 	make -f Makefile.foo
-	make -f Makefile.shared
+	make -f Makefile.shared CONF=WINDOWS
 	make -f Makefile.main
 	@echo "CONF ist "${CONF}
  else 
-	$(error Konfigurationsfehler)
+	$(error Konfigurationsfehler. Bitte CONF=WINDOWS oder CONF=LINUX angeben.)
  endif
 endif
 
