--- a/prog_aufgabe9_felix/Makefile.shared
+++ b/prog_aufgabe9_felix/Makefile.shared
@@ -7,9 +7,11 @@ shared.o: shared.c
 
 
 ifeq (${CONF},LINUX)
+	gcc -fPIC -Wall -g -c shared.c
 	gcc -shared -o shared.so shared.c
 else
  ifeq (${CONF},WINDOWS)
+	
 	gcc -shared -o shared.dll shared.c
  endif
 endif
