--- a/prog_aufgabe9_felix/Makefile.shared
+++ b/prog_aufgabe9_felix/Makefile.shared
@@ -1,14 +1,10 @@
-all: shared.o
-    
-    
+all: 
 
-shared.o: shared.c
-	gcc -c shared.c
 
 
 ifeq (${CONF},LINUX)
 	gcc -fPIC -Wall -g -c shared.c
-	gcc -shared -o shared.so shared.c
+	gcc -shared -o shared.so shared.o
 else
  ifeq (${CONF},WINDOWS)
 	
