--- a/prog_aufgabe9_hannes/Makefile
+++ b/prog_aufgabe9_hannes/Makefile
@@ -1,13 +1,13 @@
 all:
 ifeq (${CONF},LINUX)
 	make -f Makefile.foo
-	make -f Makefile.shared
+	make -f Makefile.shared CONF=${CONF}
 	make -f Makefile.main
 	@echo "CONF ist "${CONF}
 else
  ifeq (${CONF},WINDOWS)
 	make -f Makefile.foo
-	make -f Makefile.shared
+	make -f Makefile.shared CONF=${CONF}
 	make -f Makefile.main
 	@echo "CONF ist "${CONF}
  else 
