works for linux

--- a/prog_aufgabe9_felix/Makefile
+++ b/prog_aufgabe9_felix/Makefile
@@ -1,6 +1,20 @@
 # -*- Makefile -*-
 
 all:
-	make Makefile.foo
-	make Makefile.shared
-	make Makefile.main
+	make -f Makefile.shared install
+	make -f Makefile.main
+
+clean:
+	make -f Makefile.main clean
+	make -f Makefile.shared clean
+
+clear:
+	clean
+
+cl:
+	clean
+
+test: all
+	./main
+
+install:
