--- a/prog_aufgabe9_felix/Makefile
+++ b/prog_aufgabe9_felix/Makefile
@@ -2,13 +2,13 @@ all:
 ifeq (${CONF},LINUX)
 	make -f Makefile.foo
 	make -f Makefile.shared CONF=LINUX
-	make -f Makefile.main
+	make -f Makefile.main CONF=LINUX
 	@echo "CONF ist "${CONF}
 else
  ifeq (${CONF},WINDOWS)
 	make -f Makefile.foo
 	make -f Makefile.shared CONF=WINDOWS
-	make -f Makefile.main
+	make -f Makefile.main CONF=WINDOWS
 	@echo "CONF ist "${CONF}
  else 
 	$(error Konfigurationsfehler. Bitte CONF=WINDOWS oder CONF=LINUX angeben.)
