Umgebungsvariable LD_LIBRARY_PATH wird jetzt von makefile erzeugt

--- a/prog_aufgabe9_felix/Makefile
+++ b/prog_aufgabe9_felix/Makefile
@@ -1,5 +1,6 @@
 all:
 ifeq (${CONF},LINUX)
+	export LD_LIBRARY_PATH=.
 	make -f Makefile.foo
 	make -f Makefile.shared CONF=LINUX
 	make -f Makefile.main CONF=LINUX
