works for windows now

--- a/prog_aufgabe9_felix/Makefile.main
+++ b/prog_aufgabe9_felix/Makefile.main
@@ -1,13 +1,17 @@
-all: main.o main
+all: main.o main.exe
 
 main.o: main.c
 	gcc -c main.c
-
-main.exe: main.o shared.dll
+	
+main.exe: main.o shared.dll	
 ifeq (${CONF},WINDOWS)
+
+	gcc -o main.exe main.c -L. -lshared
+
+else
+main.exe: main.c libshared.so
+ifeq (${CONF},LINUX)
+
 	gcc -o main.exe main.c -L. -lshared
 endif
-main: main.c libshared.so
-ifeq (${CONF},LINUX)
-	gcc -o main main.c -L. -lshared
 endif
